# MicrotaskFlowState

./: .gitignore  GET_STARTED.md  INSTALL_SDK_COMMANDS.md  MIGRATION_TO_V2_COMPLETE.md  MODEL_MANAGEMENT.md  PREPARATION_COMPLETE.md  PREPARATION_STATUS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_SETUP.md  SETUP.md  VOICE_RECORDING_IMPLEMENTATION.md  WINDOWS_BUILD_FIX.md  build-with-vs-env.ps1  check-nodejs.ps1  check-prerequisites.ps1  create-icns.ps1  create-icons-simple.ps1  create-icons.ps1  install-rust.ps1  install-windows-sdk.ps1  package-lock.json  package.json  refresh-path.ps1  setup-vs-env.ps1
.claude/: SESSION_CONTEXT.md  settings.local.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/todos/done/: 2026-01-22-native-app-voice-recording-not-parsed.md
.planning/todos/pending/: 2026-01-22-native-app-voice-recording-not-parsed.md
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep
src-tauri/src/: commands.rs  database.rs  main.rs  native_main.rs  ollama.rs  timer.rs  whisper.rs
src/components/: AudioVisualizer.css  AudioVisualizer.tsx  ModelManager.css  ModelManager.tsx  PinIcon.css  PinIcon.tsx  RecordButton.css  RecordButton.tsx  SettingsModal.css  SettingsModal.tsx  TaskList.css  TaskList.tsx  TimerBar.css  TimerBar.tsx
src/hooks/: useAudioRecorder.ts
