[package]
name = "flowstate"
version = "1.0.0"
description = "FlowState - A lightweight Windows desktop app for managing micro-tasks"
authors = ["FlowState Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
chrono = "0.4"
windows = { version = "0.52", features = ["Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Registry"] }
# whisper-rs for speech-to-text (requires LLVM/Clang)
whisper-rs = "0.11"
hound = "3.5"
