[package]
name = "flowstate"
version = "1.0.0"
description = "FlowState - A lightweight Windows desktop app for managing micro-tasks"
authors = ["FlowState Team"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["tauri-ui"]
tauri-ui = ["tauri", "tauri-plugin-dialog", "tauri-plugin-shell", "tauri-plugin-global-shortcut", "tauri-build"]
native-ui = ["eframe", "cpal"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }
winres = "0.1"

[dependencies]
# Tauri (optional - for webview UI)
tauri = { version = "2", features = ["tray-icon"], optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-global-shortcut = { version = "2", optional = true }

# Native UI (optional - for egui)
eframe = { version = "0.29", optional = true }
cpal = { version = "0.15", optional = true }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
dirs = "5.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
chrono = "0.4"
windows = { version = "0.52", features = ["Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Registry"] }
# whisper-rs for speech-to-text (requires LLVM/Clang)
whisper-rs = "0.11"
hound = "3.5"

[[bin]]
name = "flowstate"
path = "src/main.rs"
required-features = ["tauri-ui"]

[[bin]]
name = "flowstate-native"
path = "src/native_main.rs"
required-features = ["native-ui"]
